Added double queue mode

--- a/src/app/components/manager-single/manager-single.component.html
+++ b/src/app/components/manager-single/manager-single.component.html
@@ -45,7 +45,7 @@
       <mat-grid-tile><button mat-stroked-button (click)="removeLastDigit()"><mat-icon>backspace</mat-icon></button></mat-grid-tile>
     </mat-grid-list>
 
-    <h3 routerLink="display" style="text-align: center; cursor: pointer;">Apri display</h3>
+    <h3 routerLink="single/display" style="text-align: center; cursor: pointer;">Apri display</h3>
   </div>
 
 </div>
